// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creates mock for multiple react component 1`] = `
"jest.mock(\\"./InnerComp2\\", () => jest.fn(() => \\"InnerComp2\\").mockName(\\"InnerComp2\\"));
jest.mock(\\"./InnerComp\\", () => jest.fn(() => \\"InnerComp\\").mockName(\\"InnerComp\\"));
import React from 'react';
import { render } from '@testing-library/react';
import App from './App';
import InnerComp from './InnerComp';
import InnerComp2 from './InnerComp2';
test('Mock inner components', () => {
  const {
    getByText,
    debug
  } = render(App);
  debug();
});"
`;

exports[`Creates mock for react component named imports 1`] = `
"jest.mock(\\"./InnerComp\\", () => ({
  InnerComp: jest.fn(() => \\"InnerComp\\").mockName(\\"InnerComp\\")
}));
import React from 'react';
import { render } from '@testing-library/react';
import App from './App';
import { InnerComp } from './InnerComp';
test('Mock inner components', () => {
  const {
    getByText,
    debug
  } = render(App);
  debug();
});"
`;

exports[`Creates mock single react component 1`] = `
"jest.mock(\\"./InnerComp\\", () => jest.fn(() => \\"InnerComp\\").mockName(\\"InnerComp\\"));
import React from 'react';
import { render } from '@testing-library/react';
import App from './App';
import InnerComp from './InnerComp';
test('Mock inner component', () => {
  const {
    getByText,
    debug
  } = render(App);
  debug();
});"
`;
